# nav2_hardware_ws

./: README.md
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: controllers.yaml
src/my_robot_description/launch/: hardware.launch.py  rsp.launch.py  sim.launch.py
src/my_robot_description/rviz/: nav2.rviz
src/my_robot_description/urdf/: robot.urdf
src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware.xml  package.xml
src/my_robot_hardware/esp32_firmware/: platformio.ini
src/my_robot_hardware/esp32_firmware/rover_firmware/: rover_firmware.ino
src/my_robot_hardware/include/my_robot_hardware/: serial_hardware_interface.hpp
src/my_robot_hardware/src/: serial_hardware_interface.cpp
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: ekf_params.yaml  nav2_params.yaml
src/my_robot_navigation/launch/: navigation.launch.py  navigation_sim.launch.py
